--- a/xss/production/test/3js_transform.html
+++ b/xss/production/test/3js_transform.html
@@ -18,6 +18,7 @@
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 			var renderer = new THREE.CanvasRenderer();
 		var scene = new THREE.Scene();
@@ -90,7 +91,7 @@ sphere_material.manager = manager;
 		    new THREE.PerspectiveCamera(75, 1.5, 1, 3000, null) ;				
 camera_1.manager = manager;
 	    light = 
-	    new THREE.DirectionalLight(Ivory, null, null, null) ;
+	    new THREE.DirectionalLight(Ivory, 1, 0, null) ;
 	    manager.scene.add(light);
 light.manager = manager;
 	    cylinder_1_cylinder = new THREE.CylinderGeometry(100, 100, 500, null, null, null) ;
