--- a/xss/production/test/jsmanipulate.html
+++ b/xss/production/test/jsmanipulate.html
@@ -220,6 +220,7 @@ Released   : 20120325
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <style>
 #acc1 {height : 360px}
 #app {width : 500px;height : 500px}
@@ -500,11 +501,11 @@ threejs_load_resources(manager, function()
 		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
 		    lbl4 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
 material1 = new THREE.MeshBasicMaterial({
-map:new THREE.Texture(manager.streamer.get_resource('images/test3.png').data),
+map:new THREE.Texture(manager.streamer.get_resource('images/test3.png').data)
 	});
 material1.manager = manager;
 material2 = new THREE.MeshBasicMaterial({
-map:new THREE.Texture(manager.streamer.get_resource('images/test3.png').data),
+map:new THREE.Texture(manager.streamer.get_resource('images/test3.png').data)
 	});
 material2.manager = manager;
 		    camera_1 = 
