--- a/xss/production/test/3js_cameras.html
+++ b/xss/production/test/3js_cameras.html
@@ -16,6 +16,7 @@
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 			var renderer = new THREE.CanvasRenderer();
 		var scene = new THREE.Scene();
@@ -89,7 +90,7 @@ cube1_material.manager = manager;
 		    new THREE.PerspectiveCamera(50, 1.5, 1, 10000, null) ;				
 camera_2.manager = manager;
 	    light = 
-	    new THREE.DirectionalLight(16777215, null, null, null) ;
+	    new THREE.DirectionalLight(16777215, 1, 0, null) ;
 	    manager.scene.add(light);
 light.manager = manager;
 	    sphere_1_sphere = new THREE.SphereGeometry(20, 32, 16) ;
