--- a/xss/production/test/uibuffer_test.html
+++ b/xss/production/test/uibuffer_test.html
@@ -18,6 +18,7 @@
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 			var renderer = new THREE.CanvasRenderer();
 		var scene = new THREE.Scene();
@@ -283,7 +284,7 @@ color:Math.random() * 0xffffff
 	materials.push(__basic_material2);
 __basic_material2.manager = manager;
 __basic_material3 = new THREE.MeshBasicMaterial({
-map:new THREE.Texture(webmail),
+map:new THREE.Texture(webmail)
 	});
 		manager.events.addListener("update", function()
 		{   
@@ -297,7 +298,7 @@ color:Math.random() * 0xffffff
 	materials.push(__basic_material4);
 __basic_material4.manager = manager;
 __basic_material5 = new THREE.MeshBasicMaterial({
-map:new THREE.Texture(soc_net),
+map:new THREE.Texture(soc_net)
 	});
 		manager.events.addListener("update", function()
 		{   
