--- a/xss/production/test/wgl_cameras.html
+++ b/xss/production/test/wgl_cameras.html
@@ -17,6 +17,7 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -85,10 +86,10 @@ color:Math.random() * 0xffffff,shading:flat_shading
 	});
 cube1_material.manager = manager;
 		    camera_2 = 
-		    new THREE.PerspectiveCamera(50, 1.5, 1, 10000, null) ;	
+		    new THREE.PerspectiveCamera(50, 1.5, 1, 10000, null) ;				
 camera_2.manager = manager;
 	    light = 
-	    new THREE.DirectionalLight(16777215, null, null, null) ;
+	    new THREE.DirectionalLight(16777215, 1, 0, null) ;
 	    manager.scene.add(light);
 light.manager = manager;
 	    sphere_1_sphere = new THREE.SphereGeometry(20, 32, 16) ;
