--- a/xss/production/test/wgl_package.html
+++ b/xss/production/test/wgl_package.html
@@ -18,6 +18,7 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -141,7 +142,7 @@ var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var p
 threejs_load_resources(manager, function()
 {
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(45, 1.5, 1, 10000, null) ;	
+		    new THREE.PerspectiveCamera(45, 1.5, 1, 10000, null) ;				
 camera_1.manager = manager;
 	    plane_1_plane = new THREE.PlaneGeometry(128, 164, 1, 1) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
@@ -183,18 +184,21 @@ plane_3.manager = manager;
 				manager.scene.add(container);
 				plane_5.manager = manager;
 });
-            camera_1.position.x = 500;
-            camera_1.position.y = 500;
+            camera_1.position.x = 100;
+            camera_1.position.y = 100;
             camera_1.position.z = 1000;
             set_webgl_texture_object(plane_1, "images/test1.png");
             plane_1.position.x = 100;
             plane_1.position.y = 100;
+            set_rotation_x(plane_1.rotation, 90);
             set_webgl_texture_object(plane_2, "images/test2.png");
             plane_2.position.x = 300;
             plane_2.position.y = 100;
+            set_rotation_x(plane_2.rotation, 90);
             set_webgl_texture_object(plane_3, "images/test3.png");
             plane_3.position.x = 100;
             plane_3.position.y = 300;
+            set_rotation_x(plane_3.rotation, 90);
 				pack_1.events.addListener("loaded", function()
 				{
 });
@@ -202,11 +206,13 @@ plane_3.manager = manager;
 				{
             set_webgl_texture_object(plane_4, "images/test4.png");
             plane_4.position.x = -100;
+            set_rotation_x(plane_4.rotation, 90);
 });
 				pack_1.events.addListener("loaded", function()
 				{
             set_webgl_texture_object(plane_5, "images/test5.png");
             plane_5.position.x = -400;
+            set_rotation_x(plane_5.rotation, 90);
 });
 	application.events.addListener("click", function()
 	{    
