--- a/xss/production/test/wgl_reflection_cube.html
+++ b/xss/production/test/wgl_reflection_cube.html
@@ -17,6 +17,7 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -85,7 +86,7 @@ color:White,envMap:t_cube1
 	});
 material_sphere1.manager = manager;
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(60, 1.5, 1, 100000, null) ;	
+		    new THREE.PerspectiveCamera(60, 1.5, 1, 100000, null) ;				
 camera_1.manager = manager;
 			var __panorama_cube1 = {};
 			var __panorama_cube1_shader = THREE.ShaderUtils.lib[ "cube" ];
