--- a/xss/production/test/wgl_text.html
+++ b/xss/production/test/wgl_text.html
@@ -6,7 +6,7 @@
 <body>
 <style type="text/css">
 	body{
-	background:Black;
+	background:SlateGray;
 	}
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
@@ -54,98 +54,37 @@ manager.events.dispatch("update", [g_delta, g_elapsed]);
 				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var t_cube1;var material_sphere1;var camera_1;var __panorama_cube1;
-    function create_my_sphere(
-    radius,x_segments,y_segments ) { 
-    var my_sphere;
-	    my_sphere_sphere = new THREE.SphereGeometry(radius, x_segments, y_segments) ;
-	    my_sphere = new THREE.Mesh(my_sphere_sphere, new THREE.MeshBasicMaterial());
-	    manager.scene.add(my_sphere);
-		my_sphere.events = new ev.EventHolder();
-        var this__ = my_sphere;
-        my_sphere.mat = null;
-        my_sphere.mat_set = function (value)
-        {
-            my_sphere.mat = value;
-            this.material = value;
-        };
-		if(my_sphere instanceof THREE.Object3D)
-			manager.scene.add(my_sphere);
-		my_sphere.manager = manager;
-        return my_sphere;
-        }
+var material_1;var camera_1;var __trackball_controls1;var light;var text_1;
 threejs_load_resources(manager, function()
 {
-		var urls = ["images/cube/skybox/px.jpg", "images/cube/skybox/nx.jpg",
-					"images/cube/skybox/py.jpg", "images/cube/skybox/ny.jpg",
-					"images/cube/skybox/pz.jpg", "images/cube/skybox/nz.jpg" ];		
-			t_cube1 = THREE.ImageUtils.loadTextureCube( urls, refraction_mapping);
-t_cube1.manager = manager;
-material_sphere1 = new THREE.MeshBasicMaterial({
-color:White,envMap:t_cube1,refractionRatio:0.949999988
+material_1 = new THREE.MeshLambertMaterial({
+color:Math.random() * 0xffffff,shading:smooth_shading
 	});
-material_sphere1.manager = manager;
+material_1.manager = manager;
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(60, 1.5, 1, 100000, null) ;				
+		    new THREE.PerspectiveCamera(25, 1.5, 1, 10000, null) ;				
 camera_1.manager = manager;
-			var __panorama_cube1 = {};
-			var __panorama_cube1_shader = THREE.ShaderUtils.lib[ "cube" ];
-			__panorama_cube1_shader.uniforms[ "tCube" ].texture = __panorama_cube1;
-			var __panorama_cube1_material = new THREE.ShaderMaterial( {
-				fragmentShader: __panorama_cube1_shader.fragmentShader,
-				vertexShader: __panorama_cube1_shader.vertexShader,
-				uniforms: __panorama_cube1_shader.uniforms,
-				depthWrite: false
-			} ),
-			__panorama_cube1_mesh = 
-			new THREE.Mesh( new THREE.CubeGeometry( 100000, 100000, 100000 ), __panorama_cube1_material );
-			__panorama_cube1_mesh.flipSided = true;
-			scene.add( __panorama_cube1_mesh );
-__panorama_cube1.manager = manager;
-            manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
-            camera_1.position.z = 3200;
-            application.mouse_x = null;
-            application.mouse_y = null;
-            application.spheres = [];
-            application.timer = null;
-	application.events.addListener("init", function()
-	{    
-		for(var i = 0; i < 200; i++)
-{
-var sphere_1 = 
-create_my_sphere(100, 32, 16)
-;
-sphere_1.mat_set(material_sphere1);
-sphere_1.position.x = Math.random() * 10000 - 5000;
-sphere_1.position.y = Math.random() * 10000 - 5000;
-sphere_1.position.z = Math.random() * 10000 - 5000;
-sphere_1.scale.x = Math.random() * 3 + 1;
-sphere_1.scale.y = sphere_1.scale.x;
-sphere_1.scale.z = sphere_1.scale.x;
-application.spheres.push(sphere_1);
-scene.add(sphere_1);
-}
-	}
-	);
-	application.events.addListener("update", function()
-	{    
-		application.timer = g_elapsed * 9.99999975e-005;
-camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
-camera_1.position.y = camera_1.position.y + (-application.mouse_y - camera_1.position.y) * 0.0500000007;
-for(var i = 0; i < application.spheres.length; i++)
-{
-var sphere = application.spheres[i];
-sphere.position.x = 5000 * Math.cos(application.timer + i);
-sphere.position.y = 5000 * Math.sin(application.timer + i * 1.10000002);
-}
-	}
-	);
-	application.events.addListener("mousemove", function(x,y)
-	{    
-		application.mouse_x = (x - window.innerWidth / 2) * 10;
-application.mouse_y = (y - window.innerHeight / 2) * 10;
-	}
-	);
+				__trackball_controls1 = new THREE.TrackballControls( camera_1 );
+				manager.events.addListener("update", function()
+				{				
+					__trackball_controls1.update( c_delta );
+				})
+__trackball_controls1.manager = manager;
+	    light = 
+	    new THREE.DirectionalLight(16777215, 1, 0, null) ;
+	    manager.scene.add(light);
+light.manager = manager;
+var text_1_geometry = new THREE.TextGeometry("eXceSs", {
+size:40,height:5,curveSegments:3,weight:"bold",style:"normal",bevelEnabled:true,bevelThickness:2,bevelSize:1
+	});
+	text_1 = new THREE.Mesh(text_1_geometry, material_1); 
+	manager.scene.add(text_1);
+text_1.manager = manager;
+            camera_1.position.z = 350;
+            light.position.y = 0.5;
+            light.position.z = 1;
+            text_1.position.x = -100;
+            set_rotation_y(text_1.rotation, 30);
 var event_manager = new ev.ThreeEventManager();
 document.onmousemove = function(ev)
 {
